# internal/transport/http/user/dto.go
@@ -39,10 +39,6 @@ type ErrorResponse struct {
 	Message string `json:"message"`
 }
 
-func NewErrorResponse(err error) ErrorResponse {
-	return ErrorResponse{Message: err.Error()}
-}
-
 func ToUserResponse(id uint, username, firstName, lastName, patronymic string, createdAt, updatedAt time.Time) UserResponse {
 	return UserResponse{
 		ID:         id,
